--- a/css/main.css
+++ b/css/main.css
@@ -1,59 +1,60 @@
-/* Layout
-   ========================================================================== */
-
-*, *:before, *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-
-@media (min-width: 40rem) {
-  html { font-size: 112%; }
-}
-
-@media (min-width: 64rem) {
-  html { font-size: 120%; }
-}
-
 body {
-  background-color: #fff;
-  color: #555;
+  background-color: #edeff0;
 }
 
-.container {
-  margin: 0 auto;
-  max-width: 60rem;
-  width: 100%;
+main
+{
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
+  max-width: 960px;
+  margin: auto;
+
 }
 
-
-
-/* Mobile */
-
-.column { margin-bottom: 1.5rem; }
-
-@media (min-width: 38rem) {
-  .column {
-    float: left;
-    margin: 0;
-    padding: 1.875rem;
-  }
-
-  .column.full { width: 100%; }
-  .column.two-thirds { width: 66.7%; }
-  .column.half { width: 50%; }
-  .column.third { width: 33.3%; }
-  .column.fourth { width: 25%; }
+section.innersection {
+  padding: .875em;
 }
 
+#card1
+{
+	flex-basis : 33.3333%;
 
-
-.clearfix:before,
-.clearfix:after {
-  content: " ";
-  display: table;
 }
 
-.clearfix:after { clear: both; }
-.clearfix { *zoom: 1; }
+#card2
+{
+	flex-basis : 33.3333%;
+}
+
+#card3
+{
+	flex-basis : 33.3333%;
+}
+
+#card4
+{
+	flex-basis : 25%;
+}
+
+#card5
+{
+	flex-basis : 25%;
+}
+
+@media (max-width : 800px)
+{
+	#card1, #card2, #card3, #card4, #card5{
+		flex-basis : 50%;
+	}
+}
+
+@media (max-width : 600px)
+{
+	#card1,#card2,#card3,#card4,#card5{
+		flex-basis : 100%;
+    float: none;
+   margin: 0 auto;
+	}
+
+}
